--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "14.x"
-      - run: npm ci 
-      - run: npm run format:check
-      - run: npm test --coverage
+      - run: |
+          cd client
+          npm ci 
+          npm run format:check
+          npm test --coverage
         env:
           CI: true
