--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: CI
 on: 
   pull_request:
     branches: [develop]
-
+  push:
+    branches: [develop]
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,3 +21,14 @@ jobs:
           npm test --coverage
         env:
           CI: true
+      - name: Build Project
+        if: github.event_name == 'push'
+        run: |
+          cd client
+          npm run build
+      - name: Deploy to Staging
+        if: github.event_name == 'push'
+        run: npx surge --project ./client/build --domain abrasive-tongue.surge.sh
+        env:
+          SURGE_LOGCIN: ${{ secrets.SURGE_LOGIN }}
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
