--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,47 @@
 name: CI
-on: 
-  pull_request:
-    branches: [develop]
-  push:
-    branches: [develop]
- 
+on:
+    pull_request:
+        branches: [develop]
+    push:
+        branches: [develop]
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use NodeJS
-        uses: actions/setup-node@v1
-        with:
-          node-version: "14.x"
-      - run: |
-          cd client
-          npm ci 
-          npm run format:check
-          npm test --coverage
-        env:
-          CI: true
-      - name: Build Project
-        if: github.event_name == 'push'
-        run: |
-          cd client
-          npm run build
-      - name: Deploy to Staging
-        if: github.event_name == 'push'
-        run: npx surge --project ./client/build --domain abrasive-tongue.surge.sh
-        env:
-          SURGE_LOGCIN: ${{ secrets.SURGE_LOGIN }}
-          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            
+            - name: Cache node_modules
+              uses: actions/cache@v2
+              with:
+                  path: ~/.npm
+                  key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+                  restore-key: |
+                      ${{ runner.os }}-node-
+
+            - name: Use NodeJS
+              uses: actions/setup-node@v1
+              with:
+                  node-version: "14.x"
+
+            - name: React Test Coverage
+            - run: |
+                  cd client
+                  npm ci 
+                  npm run format:check
+                  npm test --coverage
+              env:
+                  CI: true
+
+            - name: Build Project
+              if: github.event_name == 'push'
+              run: |
+                  cd client
+                  npm run build
+            - name: Deploy to Staging
+
+              if: github.event_name == 'push'
+              run: npx surge --project ./client/build --domain abrasive-tongue.surge.sh
+              env:
+                  SURGE_LOGCIN: ${{ secrets.SURGE_LOGIN }}
+                  SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
