--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Cache node_modules
-      - uses: actions/cache@v2
+        uses: actions/cache@v2
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-key: |
             ${{ runner.os }}-node-
+
       - name: Use NodeJS
         uses: actions/setup-node@v1
         with:
           node-version: "14.x"
+
       - name: React Test Coverage
-      - run: |
+        run: |
           cd client
           npm ci 
           npm run format:check
