--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,28 @@ jobs:
           cd client
           npm ci 
           npm run format:check
-          npm test --coverage
+          npm test -- --coverage
         env:
           CI: true
+
+      - name: Upload Test --coverage Folder
+        uses: actions/upload-artifact@v1
+        with:
+          name: code-coverage
+          path: ./client/coverage
+
       - name: Build Project
         if: github.event_name == 'push'
         run: |
           cd client
           npm run build
+
+      - name: Upload Build Folder
+        uses: actions/upload-artifact@v1
+        with:
+          name: build
+          path: ./client/build
+
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: npx surge --project ./client/build --domain abrasive-tongue.surge.sh
